--- a/index.html
+++ b/index.html
@@ -415,9 +415,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-7">
                     <div class="bg-white rounded p-4 p-sm-5 wow fadeIn" data-wow-delay="0.5s">
-                        <h1 class="display-5 text-center mb-5">Contact Us</h1>
-                        <div class="row g-3">
-                            <form action="https://formsubmit.co/deep.9477@gmail.com" method="POST" >
+                        <h1 class="display-5 text-center mb-5">Contact Us</h1> 
+                            <form action="" method="POST" class="row g-3">
                                 <div class="col-sm-6">
                                     <div class="form-floating">
                                         <input type="text" class="form-control bg-light border-0" id="gname" name="name" placeholder="Your Name">
@@ -451,8 +450,7 @@
                                 <div class="col-12 text-center">
                                     <button type="submit" class="btn btn-primary py-3 px-4" id="sumbit">Submit Now</button>
                                 </div>
-                            </form>
-                        </div>
+                            </form> 
                     </div>
                 </div>
             </div>
