--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
         <div class="spinner-border text-primary" role="status" style="width: 3rem; height: 3rem;"></div>
     </div>
     <!-- Spinner End -->
-    <input  type="button" id="btn" value="test" />
-
+   
     <!-- Topbar Start -->
     <div class="container-fluid bg-dark text-light px-0 py-2">
         <div class="row gx-0 d-none d-lg-flex">
@@ -82,11 +81,7 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Events</a>
                     <div class="dropdown-menu bg-light m-0">
-                        <a href="feature.html" class="dropdown-item">Features</a>
-                        <a href="quote.html" class="dropdown-item">Free Quote</a>
-                        <a href="team.html" class="dropdown-item">Our Team</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
+                        <a href="feature.html" class="dropdown-item">Test</a> 
                     </div>
                 </div>
                 <!--<a href="about.html" class="nav-item nav-link">About</a>-->
@@ -95,11 +90,7 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Social Events</a>
                     <div class="dropdown-menu bg-light m-0">
-                        <a href="feature.html" class="dropdown-item">Features</a>
-                        <a href="quote.html" class="dropdown-item">Free Quote</a>
-                        <a href="team.html" class="dropdown-item">Our Team</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
+                        <a href="feature.html" class="dropdown-item">Test</a> 
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -416,9 +407,11 @@
                 <div class="col-lg-7">
                     <div class="bg-white rounded p-4 p-sm-5 wow fadeIn" data-wow-delay="0.5s">
                         <h1 class="display-5 text-center mb-5">Contact Us</h1> 
-                            <form action="https://formsubmit.co/deep.9477@gmail.com" method="POST" class="row g-3">
+                            <form action="https://formsubmit.co/agomoni.netherlands@gmail.com" method="POST" class="row g-3">
                                 <div class="col-sm-6">
                                     <div class="form-floating">
+                                        <input type="hidden" name="_next" value="https://agomoninl.github.io/thank-you.html">
+                                        <input type="hidden" name="_subject" value="New message from Home page!">
                                         <input type="text" class="form-control bg-light border-0" id="gname" name="name" placeholder="Your Name">
                                         <label for="gname">Your Name</label>
                                     </div>
@@ -429,7 +422,7 @@
                                         <label for="gmail">Your Email</label>
                                     </div>
                                 </div>
-                                <div class="col-sm-6">
+                                <!--<div class="col-sm-6">
                                     <div class="form-floating">
                                         <input type="text" class="form-control bg-light border-0" id="cname" placeholder="Child Name">
                                         <label for="cname">Your Mobile</label>
@@ -440,7 +433,7 @@
                                         <input type="text" class="form-control bg-light border-0" id="cage" placeholder="Child Age">
                                         <label for="cage">Event Name</label>
                                     </div>
-                                </div>
+                                </div>-->
                                 <div class="col-12">
                                     <div class="form-floating">
                                         <textarea class="form-control bg-light border-0" placeholder="Leave a message here" name="message" id="message" style="height: 100px"></textarea>
