--- a/index.html
+++ b/index.html
@@ -407,10 +407,11 @@
                 <div class="col-lg-7">
                     <div class="bg-white rounded p-4 p-sm-5 wow fadeIn" data-wow-delay="0.5s">
                         <h1 class="display-5 text-center mb-5">Contact Us</h1> 
-                            <form action="https://formsubmit.co/agomoni.netherlands@gmail.com" method="POST" class="row g-3">
+                            <form action="https://formsubmit.co/ea82d40e15bceeed49baab74f5a3f1af" method="POST" class="row g-3">
                                 <div class="col-sm-6">
                                     <div class="form-floating">
                                         <input type="hidden" name="_next" value="https://agomoninl.github.io/thank-you.html">
+                                        <input type="hidden" name="_cc" value="deep.9477@email.com">
                                         <input type="hidden" name="_subject" value="New message from Home page!">
                                         <input type="text" class="form-control bg-light border-0" id="gname" name="name" placeholder="Your Name">
                                         <label for="gname">Your Name</label>
