email support and thank-you page added

--- a/index.html
+++ b/index.html
@@ -411,7 +411,8 @@
                                 <div class="col-sm-6">
                                     <div class="form-floating">
                                         <input type="hidden" name="_next" value="https://agomoninl.github.io/thank-you.html">
-                                        <input type="hidden" name="_cc" value="deep.9477@email.com">
+                                        <input type="hidden" name="_cc" value="deep.9477@gmail.com">
+                                        <input type="hidden" name="_captcha" value="false">
                                         <input type="hidden" name="_subject" value="New message from Home page!">
                                         <input type="text" class="form-control bg-light border-0" id="gname" name="name" placeholder="Your Name">
                                         <label for="gname">Your Name</label>
