email support and thank-you page added

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-floating">
-                                        <input type="email" class="form-control bg-light border-0" id="gmail" placeholder="Your Email">
+                                        <input  type="email" name="email" class="form-control bg-light border-0" id="gmail" placeholder="Your Email">
                                         <label for="gmail">Your Email</label>
                                     </div>
                                 </div>
