--- a/thank-you.html
+++ b/thank-you.html
@@ -43,22 +43,21 @@
     <div class="container-fluid bg-dark text-light px-0 py-2">
         <div class="row gx-0 d-none d-lg-flex">
             <div class="col-lg-7 px-5 text-start">
-                <div class="h-100 d-inline-flex align-items-center me-4">
+                <!-- <div class="h-100 d-inline-flex align-items-center me-4">
                     <span class="fa fa-phone-alt me-2"></span>
                     <span>+012 345 6789</span>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <span class="far fa-envelope me-2"></span>
                     <span>info@example.com</span>
-                </div>
+                </div> -->
             </div>
             <div class="col-lg-5 px-5 text-end">
                 <div class="h-100 d-inline-flex align-items-center mx-n2">
                     <span>Follow Us:</span>
-                    <a class="btn btn-link text-light" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-link text-light" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-link text-light" href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-link text-light" href=""><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-link text-light" target="_blank" href="https://www.facebook.com/agomoni.nl23"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-link text-light" target="_blank" href="https://www.youtube.com/@agomoninetherlands23"><i class="fab fa-youtube"></i></a> 
+                    <a class="btn btn-link text-light" target="_blank" href="https://www.instagram.com/agomoni_netherlands/ "><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
@@ -78,29 +77,29 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link active">Home</a>
-                <div class="nav-item dropdown">
+                <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Events</a>
                     <div class="dropdown-menu bg-light m-0">
-                        <a href="feature.html" class="dropdown-item">Test</a>
+                        <a href="feature.html" class="dropdown-item">Test</a> 
                     </div>
-                </div>
-                <!--<a href="about.html" class="nav-item nav-link">About</a>-->
-                <a href="service.html" class="nav-item nav-link">Media</a>
+                </div> -->
+                <a href="about.html" class="nav-item nav-link about-link">About</a>
+                <!-- <a href="service.html" class="nav-item nav-link">Media</a>
                 <a href="project.html" class="nav-item nav-link">Sponsors</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Social Events</a>
                     <div class="dropdown-menu bg-light m-0">
                         <a href="feature.html" class="dropdown-item">Test</a> 
                     </div>
-                </div>
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
+                </div> -->
+                <a href="contact.html" class="nav-item nav-link contact-link">Contact</a>
             </div>
-            <a href="" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block bigger-btn">Donate<i class="fa fa-arrow-right ms-3"></i></a>
+            <a href="https://agomoninl.github.io/coming-soon.html" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block bigger-btn">Register<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
     <!-- Navbar End -->
 
-    <!-- 404 Start -->
+    <!-- Thank you Start -->
     <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container text-center">
             <div class="row justify-content-center">
@@ -114,11 +113,52 @@
             </div>
         </div>
     </div>
-    <!-- 404 End -->
+    <!-- Thank you End -->
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
 
+    <!-- Footer Start -->
+    <div class="container-fluid bg-dark text-light footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
+        <div class="container py-5">
+            <div class="row g-5">
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-4">KVK</h4>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>89806506</p> 
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>agomoni.netherlands@gmail.com</p>
+                    <div class="d-flex pt-2">
+                        <a class="btn btn-square btn-outline-light rounded-circle me-2" target="_blank" href="https://www.facebook.com/agomoni.nl23"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-square btn-outline-light rounded-circle me-2" target="_blank" href="https://www.youtube.com/@agomoninetherlands23"><i class="fab fa-youtube"></i></a> 
+                        <a class="btn btn-square btn-outline-light rounded-circle me-2" target="_blank" href="https://www.instagram.com/agomoni_netherlands/ "><i class="fab fa-instagram"></i></a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-4">Events</h4>
+                    <a class="btn btn-link" href="https://agomoninl.github.io/coming-soon.html">Durga Pujo</a>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-4">Quick Links</h4>
+                    <a class="btn btn-link about-link" href="">About Us</a>
+                    <a class="btn btn-link contact-link" href="">Contact Us</a>
+                    <a class="btn btn-link" href="https://agomoninl.github.io/coming-soon.html">Our Events</a>
+                    <a class="btn btn-link" href="https://agomoninl.github.io/coming-soon.html">Terms & Condition</a>
+                    <a class="btn btn-link" href="https://agomoninl.github.io/coming-soon.html">Support</a>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-4">Newsletter</h4>
+                    <p>Join our community and be the first to receive exclusive updates by signing up for our newsletter today!</p> 
+                    <form action="https://formsubmit.co/ea82d40e15bceeed49baab74f5a3f1af" method="POST" class="position-relative w-100">
+                        <input type="hidden" name="_next" value="https://agomoninl.github.io/coming-soon.html">
+                        <input type="hidden" name="_captcha" value="false">
+                        <input type="hidden" name="_subject" value="Add to newsletter!">
+                        <input class="form-control bg-light border-light w-100 py-3 ps-4 pe-5" type="text" name="email" placeholder="Your email">
+                        <button type="submit" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Footer End -->
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
