--- a/index.html
+++ b/index.html
@@ -145,8 +145,10 @@
                                 <i class="fab fa-solid fa-youtube text-primary"></i> 
                             </div>
                             <div class="ps-3">
+                                <a target="_blank" href="https://www.youtube.com/@agomoninetherlands23">
                                 <h4>Youtube</h4>
                                 <span>Don't miss out on the fun! Make sure to subscribe to our YouTube channel so you can stay up-to-date with all of our latest videos and never miss a moment.</span>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -158,8 +160,10 @@
                                 <i class="fab fa-solid fa-facebook text-primary"></i> 
                             </div>
                             <div class="ps-3">
+                                <a target="_blank" href="https://www.facebook.com/agomoni.nl23">
                                 <h4>Facebook</h4>
                                 <span>Be a part of our online community! Give our Facebook page a thumbs up and stay connected with us for exciting updates, engaging content, and much more.</span>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -171,8 +175,10 @@
                                 <i class="fab fa-solid fa-instagram text-primary"></i> 
                             </div>
                             <div class="ps-3">
+                                <a target="_blank" href="https://www.instagram.com/agomoni_netherlands/">
                                 <h4>Instagram</h4>
                                 <span>Join us on Instagram and explore the minute by minute update from our pujo! Follow our account to stay up-to-date with our latest posts, behind-the-scenes moments, and much more.</span>
+                                </a>
                             </div>
                         </div>
                     </div>
