--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                 <div class="col-lg-8">
                                     <h1 class="display-1 text-white mb-5 animated slideInDown">Welcome to Agomoni Netherlands</h1>
                                     <a href="" class="btn btn-primary py-sm-3 px-sm-4 contact-us contact-link">Contact Us</a>
-                                    <a href="" class="btn btn-primary py-sm-3 px-sm-4">Register</a>
+                                    <a href="https://agomoninl.github.io/coming-soon.html" class="btn btn-primary py-sm-3 px-sm-4">Register</a>
                                 </div>
                             </div>
                         </div>
