--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                 </div> 
                 <div class="col-lg-6">
                     <div class="col-12 wow fadeIn" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeIn;">
-                        <img class="col-12" src="img/Agomoni Event Flyer-1_jpeg.jpg"/>
+                        <img class="col-12" src="img/event.jpg"/>
                    </div> 
                 </div>
             </div>
