--- a/thank-you.html
+++ b/thank-you.html
@@ -124,7 +124,7 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">KVK</h4>
-                    <p class="mb-2"><i class="fa fa-fbookmark me-3"></i>89806506</p> 
+                    <p class="mb-2"><i class="fa fa-bookmark me-3"></i>89806506</p> 
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>agomoni.netherlands@gmail.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-light rounded-circle me-2" target="_blank" href="https://www.facebook.com/agomoni.nl23"><i class="fab fa-facebook-f"></i></a>
