--- a/coming-soon.html
+++ b/coming-soon.html
@@ -76,14 +76,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link active">Home</a>
+                <!-- <a href="index.html" class="nav-item nav-link active">Home</a> -->
                 <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Events</a>
                     <div class="dropdown-menu bg-light m-0">
                         <a href="feature.html" class="dropdown-item">Test</a> 
                     </div>
                 </div> -->
-                <a href="about.html" class="nav-item nav-link about-link">About</a>
+                <!-- <a href="about.html" class="nav-item nav-link about-link">About</a> -->
                 <!-- <a href="service.html" class="nav-item nav-link">Media</a>
                 <a href="project.html" class="nav-item nav-link">Sponsors</a>
                 <div class="nav-item dropdown">
@@ -92,9 +92,9 @@
                         <a href="feature.html" class="dropdown-item">Test</a> 
                     </div>
                 </div> -->
-                <a href="contact.html" class="nav-item nav-link contact-link">Contact</a>
+                <!-- <a href="contact.html" class="nav-item nav-link contact-link">Contact</a> -->
             </div>
-            <a href="https://agomoninl.github.io/coming-soon.html" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block bigger-btn">Register<i class="fa fa-arrow-right ms-3"></i></a>
+            <a href="https://agomoninl.github.io/index.html" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block bigger-btn">Home<i class="fa fa-home ms-3"></i></a>
         </div>
     </nav>
     <!-- Navbar End -->
