--- a/thank-you.html
+++ b/thank-you.html
@@ -94,7 +94,7 @@
                 </div> -->
                 <!-- <a href="contact.html" class="nav-item nav-link contact-link">Contact</a> -->
             </div>
-            <a href="https://agomoninl.github.io/index.html" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block bigger-btn">Register<i class="fa fa-arrow-home ms-3"></i></a>
+            <a href="https://agomoninl.github.io/index.html" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block bigger-btn">Home<i class="fa fa-arrow-home ms-3"></i></a>
         </div>
     </nav>
     <!-- Navbar End -->
